--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Flickr Demo</string>
+    <string name="search_label">Search</string>
+    <string name="search_hint">Search query</string>
 </resources>
